# transcription-bot

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requests.http  requirements.txt  sgu.code-workspace  show_notes.pkl  speech_request.py
.github/: dependabot.yml
.github/workflows/: main.yml  on_push.yml  pr.yml  push.yml  pysa.yml  release.yml
doc/: startup_script.sh  vm_setup.txt
sgu/: audio_metadata.py  audio_processing.py  caching.py  config.py  custom_logger.py  custom_types.py  data_gathering.py  downloader.py  episode.py  episode_segments.py  exceptions.py  file_cache.py  global_http_client.py  helpers.py  hosts.py  llm_interface.py  main.py  rss_feed.py  segment_joiner.py  segment_types.py  segmentation.py  segments.py  show_notes.py  template_environment.py  transcript_formatting.py  transcription.py  transcription_splitting.py  voiceprints.py  webhook_server.py  wiki.py
sgu/archive/: custom_types.py  episode.py  helpers.py  main.py
sgu/data/: voiceprint_map.json
sgu/data/templates/: base.j2x  dumbest.j2x  email.j2x  interview.j2x  intro.j2x  logical_fallacy.j2x  news.j2x  noisy.j2x  quickie.j2x  quote.j2x  science_or_fiction.j2x  tiktok.j2x  unknown.j2x  whats_the_word.j2x
sgu/entrypoints/: calculate_total_runtime.py  create_pyannote_voiceprint.py  download_all.py  get_pyannote_diarization.py
sgu/parsers/: episode_data.py  lyrics.py  rss_feed.py  show_notes.py  soup_helpers.py  summary_text.py
sgu/scripts/: calculate_total_runtime.py  create_pyannote_voiceprint.py  download_all.py
sgu_sof_tool/: config.py  constants.py  custom_types.py  episodes.py  helpers.py  main.py  podcast_episode.py  transcription.py
sgu_tool/: config.py  custom_types.py  get_models.py  helpers.py  main.py  notebook.ipynb  podcast_episode.py
tests/: conftest.py  test_caching.py  test_episode_data_to_segments.py  test_episode_segments.py  test_llm_interface.py  test_wiki.py
tests/data_processing/: test_episode_data_to_segments.py
tests/data_processing/transcription/: __init__.py
tests/handlers/: test_episode_data_handler.py
tests/interfaces/: test_llm_interface.py  test_wiki.py
tests/models/: test_data_models.py  test_episode_data.py  test_episode_segments.py
tests/models/episode_segments/: test_news.py  test_science_or_fiction.py  test_simple_segments.py
tests/serializers/: test_wiki.py
tests/utils/: test_caching.py  test_helpers.py
transcription_bot/: caching.py  config.py  data_gathering.py  data_models.py  episode_segments.py  exceptions.py  global_logger.py  helpers.py  llm_interface.py  main.py  monitoring.py  segment_joiner.py  segment_merger.py  template_environment.py  templating.py  transcript_formatting.py  transcription.py  transcription_splitting.py  webhook_server.py  wiki.py
transcription_bot/converters/: episode_data_to_segments.py
transcription_bot/data/: config.toml  voiceprint_map.json
transcription_bot/data/templates/: base.j2x  dumbest.j2x  email.j2x  episode_list_entry.j2x  interview.j2x  intro.j2x  logical_fallacy.j2x  news.j2x  noisy.j2x  outro.j2x  quickie.j2x  quote.j2x  science_or_fiction.j2x  tiktok.j2x  unknown.j2x  whats_the_word.j2x
transcription_bot/data_processing/: episode_data_to_segments.py  episode_metadata.py
transcription_bot/data_processing/transcription/: _diarized_transcript.py  _transcription.py
transcription_bot/entrypoints/: create_100s_page.py  create_podcast_transcript.py  create_pyannote_voiceprint.py  download_raw_data.py  update_wiki_episode_lists.py
transcription_bot/handlers/: episode_data_handler.py  episode_metadata_handler.py  episode_raw_data_handler.py  episode_segment_handler.py
transcription_bot/handlers/transcription_handler/: _diarization.py  _diarized_transcript.py  _transcription.py
transcription_bot/interfaces/: azure.py  llm_interface.py  pyannote.py  wiki.py
transcription_bot/models/: data_models.py  episode_data.py  episode_segments.py  simple_models.py
transcription_bot/models/episode_segments/: __init__.py  base.py  news.py  science_or_fiction.py  simple_segments.py  type_hints.py
transcription_bot/parsers/: episode_data.py  lyrics.py  rss_feed.py  show_notes.py  summary_text.py
transcription_bot/scripts/: add_missing_year_lists.py  calculate_total_runtime.py  create_100s_page.py  create_pyannote_voiceprint.py  download_all.py  get_all_episode_lyrics.py  perform_multiple_transcriptions.py
transcription_bot/serializers/: wiki.py
transcription_bot/transcription/: __init__.py  _diarization.py  _diarized_transcript.py  _transcription.py
transcription_bot/utils/: caching.py  config.py  exceptions.py  global_http_client.py  global_logger.py  helpers.py  issue_tracking.py  templating.py  webhook_server.py
typings/mwparserfromhell/nodes/: __init__.pyi  template.pyi
typings/mwparserfromhell/nodes/extras/: __init__.pyi  parameter.pyi
